--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
+    "@types/meteor": "^1.4.27",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "typescript": "^3.3.4000"
   },
   "meteor": {
     "mainModule": {
