--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@babel/runtime": "^7.1.5",
     "@types/meteor": "^1.4.27",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
@@ -17,8 +19,8 @@
   },
   "meteor": {
     "mainModule": {
-      "client": "client/main.jsx",
-      "server": "server/main.js"
+      "client": "client/main.tsx",
+      "server": "server/main.ts"
     },
     "testModule": "tests/main.js"
   }
