--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/runtime": "^7.1.5",
     "@types/meteor": "^1.4.27",
     "@types/nightwatch": "^0.9.12",
+    "@types/node": "^11.12.1",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "chromedriver": "^2.46.0",
