--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "emitDecoratorMetadata": true,
     "outDir": "./.meteor/local/tsout",
     "baseUrl": ".",
+    "types": ["node", "meteor"],
     "paths": {
       "*": ["*"]
     },
