--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --once --driver-package meteortesting:mocha",
+    "test": "jest",
+    "test-meteor": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "test-nightwatch": "nightwatch -c config/nightwatch.json",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
+    "@types/jest": "^24.0.11",
     "@types/meteor": "^1.4.27",
     "@types/nightwatch": "^0.9.12",
     "@types/node": "^11.12.1",
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
+    "@types/react-test-renderer": "^16.8.1",
+    "babel-jest": "^24.5.0",
     "chromedriver": "^2.46.0",
     "meteor-node-stubs": "^0.4.1",
     "nightwatch": "^1.0.19",
@@ -28,5 +32,13 @@
       "server": "server/main.ts"
     },
     "testModule": "tests/main.js"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
+    "meteor-jest-stubs": "^1.8.0",
+    "react-test-renderer": "^16.8.6"
   }
 }
