--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "^24.5.0",
     "chromedriver": "^2.46.0",
+    "elastic-apm-node": "^2.11.6",
     "meteor-node-stubs": "^0.4.1",
     "nightwatch": "^1.0.19",
     "react": "^16.5.0",
