--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "meteor-node-stubs": "^0.4.1",
     "mini-css-extract-plugin": "^0.7.0",
     "nightwatch": "^1.0.19",
+    "node-sass": "^4.12.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "sass-loader": "^7.1.0",
